--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
 <div class="top-container">
     <a class="blog" href="https://www.chisimdi.com/">Blog</a>
-    <img class="top-design" src="Images/1.png" alt="cloud-image">
+    <img class="top-design" src="1.png" alt="cloud-image">
     <h1>I'm Chisimdi</h1>
     <h4>a software engineer.</h4>
-    <img class="bottom-design" src="Images/2.png" alt="cloud-image">
-    <img class = "home-page-image" src="Images/home_page_design.png" alt="image">
+    <img class="bottom-design" src="2.png" alt="cloud-image">
+    <img class = "home-page-image" src="home_page_design.png" alt="image">
 </div>
 <div class="middle-container">
   <div class="profile">
       <h2>Hello.</h2>
-    <img class="portrait" src="Images/smiley.png" alt="portrait">
+    <img class="portrait" src="smiley.png" alt="portrait">
     <p class = "bio"> I'm a software engineer based in London. I'm passionate about building and maintaining <span class="efficient"> efficient </span>products.</p>
   </div>
   <hr>
